k8s/acquisti/acquisti-service.yml
apiVersion: v1
kind: Service
metadata:
  name: acquisti
spec:
  selector:
    app: af
    tier: acquisti
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  # type: NodePort
