k8s/acquisti/acquisti-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acquisti
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
spec:
 rules:
 - host: acquisti.local
   http:
     paths:
     - path: /(.+)
       pathType: Prefix
       backend:
         service:
           name: acquisti
           port:
             number: 8080
